# google-trends-cli

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  Updates.md  codecov.yml  coverage.xml  fix_imports.py  fix_imports_deeper.py  line.txt  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_trending.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  pr-to-release.yml  publish.yml  release.yml  tests.yml
config/: development.yml  docker.yml  production.yml  testing.yml
docker/: Dockerfile.api  Dockerfile.cli  docker-compose.yml
docs/: installation.md
docs/development/: installation.md
gtrends/: __init__.py  cli.py  config.py  content_suggestions.py  formatters.py  trends_api.py  utils.py
requirements/: api.txt  base.txt  development.txt  production.txt  testing.txt
scripts/: deploy.sh  setup.sh  test.sh
src/gtrends_api/: main.py
src/gtrends_api/dependencies/: core.py
src/gtrends_api/middleware/: __init__.py  cors.py  error_handling.py  rate_limiting.py
src/gtrends_api/routers/: comparison.py  geo.py  growth.py  opportunities.py  related.py  suggestions.py  trending.py
src/gtrends_api/schemas/: __init__.py  requests.py  responses.py
src/gtrends_cli/: __init__.py  main.py
src/gtrends_cli/commands/: __init__.py  categories_command.py  compare_command.py  geo_command.py  growth_command.py  help_command.py  opportunities_command.py  related_command.py  suggestions_command.py  trending_command.py
src/gtrends_cli/formatters/: console.py  export.py
src/gtrends_core/: __init__.py  config.py
src/gtrends_core/exceptions/: trends_exceptions.py  trends_exceptions.py.bak
src/gtrends_core/models/: base.py  comparison.py  related.py  trending.py
src/gtrends_core/services/: __init__.py  comparison_service.py  geo_service.py  growth_service.py  opportunity_service.py  related_service.py  suggestion_service.py  trending_service.py
src/gtrends_core/utils/: __init__.py  formatters.py  helpers.py  validators.py
tests/: __init__.py  conftest.py  test_cli.py  test_content_suggestions.py  test_formatters.py  test_trends_api.py  test_utils.py
tests/integration/: test_api_integration.py  test_cli_integration.py
tests/unit/test_core/: test_comparison_service.py  test_related_service.py  test_trending_service.py
