[metadata]
name = gtrends-cli
description = CLI and API tools for Google Trends data analysis and content suggestions
long_description = file: README.md
long_description_content_type = text/markdown
author = Mohammed A. Al-Kebsi
author_email = mohammed.k@mohammed-al-kebsi.space
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gtrends = gtrends_cli.main:main
    gtrends-api = gtrends_api.main:start_api

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True 