[metadata]
name = gtrends-cli
description = CLI and API tools for Google Trends data analysis and content suggestions
long_description = file: README.md
long_description_content_type = text/markdown
author = Mohammed A. Al-Kebsi
author_email = mohammed.k@mohammed-al-kebsi.space
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
zip_safe = False
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gtrends = gtrends_cli.main:cli
    gtrends-api = gtrends_api.main:start

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
ignore = E203, W503

[mypy]
python_version = 3.12
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True

[mypy.plugins.pandas.*]
ignore_missing_imports = True

[mypy.plugins.trendspy.*]
ignore_missing_imports = True

[mypy.plugins.matplotlib.*]
ignore_missing_imports = True

[mypy.plugins.rich.*]
ignore_missing_imports = True 